# EVD4SC2025

./: CMakeLists.txt  LICENSE  README.md
api/: BC_backTransV8_10_noBandU.cu  computerQFromWY.cu  computerWYFromSlide.cu  panelQR.cu  zy_zy_sy2sb.cu
api/TCblas/: tc_ozimmu_syr2k.cu  tc_syr2k.cu
api/inc/: BC_backTrans.h  PanelQR.h  TallShinnyQR.h  tc_ozimmu_syr2k.h  tc_syr2k.h  zy_zy_sy2sb.h
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
bulid/src/: Makefile  cmake_install.cmake  my_SB2TR_ZY_ZY_V3
bulid/src/EVD/: Makefile  cmake_install.cmake  myEVD
inc/: cusolver_util.h  myBase.h
plt/SC25/: total_EVD_perf_bar_H100PCIE.py
src/: CMakeLists.txt  my_SB2TR_ZY_ZY_V3.cu
src/EVD/: CMakeLists.txt  myEVD.cu
util/inc/: bugle_chasingV10.h  bugle_chasingV7.h  fileOpTool.h  kernelOther.h  kernelQR.h
util/kernelOther/: kernelOther.cu
util/tool/: checkMetric.cu  fileOpTool.cu
