cmake_minimum_required(VERSION 3.12)


set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -G -lineinfo -ggdb -DDEBUG")
set(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -G -lineinfo -ggdb -DDEBUG")


set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo")

message("${CMAKE_CXX_FLAGS_DEBUG}")

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_USE_RESPONSE_FILE_FOR_OBJECTS 0)
set(CMAKE_C_USE_RESPONSE_FILE_FOR_LIBRARIES 0)
set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS 0)
set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES 0)
set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_INCLUDES 0)
set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_OBJECTS 0)


set(CMAKE_VERBOSE_MAKEFILE ON)


set(CMAKE_CUDA_ARCHITECTURES 90)

# set(CMAKE_CUDA_COMPILER /usr/local/cuda-12.6/bin/nvcc)
project(myqrcode LANGUAGES CXX CUDA)


add_subdirectory(src)